--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -440,6 +440,9 @@ Send neges heb ei ddiogelu?</string>
   <string name="DeviceListItem_today">Heddiw</string>
   <!--DocumentView-->
   <string name="DocumentView_unnamed_file">Ffeil dienw</string>
+  <!--DonateMegaphone-->
+  <string name="DonateMegaphone_donate_to_signal">Cyfrannu at Signal</string>
+  <string name="DonateMegaphone_not_now">Nid nawr</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimeiddio ar gyfer Play Services coll</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Nid yw\'r ddyfais hon yn cefnogi Play Services Tapiwch i analluogi gwelliannau batri system sy\'n atal Signal rhag adfer negeseuon tra\'n anweithredol.</string>
