--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -438,6 +438,9 @@
   <string name="DeviceListItem_today">Danes</string>
   <!--DocumentView-->
   <string name="DocumentView_unnamed_file">Datoteka brez imena</string>
+  <!--DonateMegaphone-->
+  <string name="DonateMegaphone_donate_to_signal">Podprite Signal</string>
+  <string name="DonateMegaphone_not_now">Ne zdaj</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimiziraj za manjkajočo aplikacijo Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Naprava ne podpira storitev Play Services. Tapnite za izklop optimizacije baterije, ki aplikaciji Signal preprečuje povezavo v času neaktivnosti naprave.</string>
